--- a/css/main.css
+++ b/css/main.css
@@ -5,6 +5,9 @@ body {
 .logoColor1 {
   background-color: #F8EDD1;
 }
+.outdoorColor {
+  background-color: #eee;
+}
 #map {
   height: 400px;  /* The height is 400 pixels */
   width: 100%;  /* The width is the width of the web page */
