--- a/css/main.css
+++ b/css/main.css
@@ -1,14 +1,45 @@
 body {
-  /*background-color: #C9DBE9;*/
-  background: url('../images/brick.jpg');
+  background-color: #C9DBE9;
 }
 .logoColor1 {
-  background-color: #F8EDD1;
+  background-color: #fbefcc; /*#F8EDD1;*/
+}
+.c2 {
+  opacity: 1;
 }
 .outdoorColor {
-  background-color: #eee;
+  background-color: #e0876a /*#eee;*/
+}
+.inside {
+  background: url('../images/inside.jpg');
+  background-color: #ffffff;
+  opacity: .6;
+}
+.logoPad {
+  padding-right: 0;
 }
 #map {
   height: 400px;  /* The height is 400 pixels */
   width: 100%;  /* The width is the width of the web page */
+}
+.fa {
+  padding: 10px;
+  font-size: 25px;
+  width: 40px;
+  text-align: center;
+  text-decoration: none;
+  border-radius: 50%;
+  background: #e0876a;
+}
+.fa:hover {
+  opacity: 0.7;
+}
+.fa-facebook {
+  color: white;
+}
+.fa-instagram {
+  color: white;
+}
+.centerNav {
+  text-align: center;
 }
