--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,6 @@
 body {
   background-color: #C9DBE9;
+  font-family: 'Doppio One';
 }
 .logoColor1 {
   background-color: #fbefcc; /*#F8EDD1;*/
@@ -21,6 +22,7 @@ body {
   margin-right: 0;
   margin-left: 0;
 }
+.top-buffer { margin-top:20px; }
 #map {
   height: 400px;  /* The height is 400 pixels */
   width: 100%;  /* The width is the width of the web page */
@@ -47,7 +49,7 @@ body {
   text-align: center;
 }
 .rText1 {
-  font-size: 5vw;
+  font-size: 3.5vw;
 }
 .rText2 {
   font-size: 2.5vw;
